# template_mcp

./: .gitignore  README.md  example.env  pyproject.toml  run_server.py
.trunk/: trunk.yaml
examples/: simple_client.py
src/kiara_mcp/: __init__.py  config.py  py.typed
src/kiara_mcp/prompts/: __init__.py
src/kiara_mcp/resources/: __init__.py
src/kiara_mcp/tools/: example_tool.py
src/template_mcp/: server.py
src/template_mcp/resources/: __init__.py  example_resource.py
src/template_mcp/tools/: __init__.py  example_tool.py  input_validation.py
tests/: test_tools.py
