[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template_mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) server implementation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "mcp",
    "httpx",
    "pydantic>=2.0.0",
    "python-dotenv",
]

[project.scripts]
template-mcp = "template_mcp:main"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "pytest-asyncio",
] 